# running_mcp

./: README.md
strideMCP/: docker-compose.yml  pyproject.toml
strideMCP/server/: embedding_state.json  main.py
strideMCP/server/config/: config.py
strideMCP/server/database/: db.py  queries.py
strideMCP/server/models/: rolling_average_snapshots.py  snapshot_metrics.py
strideMCP/server/services/: embedding_state.json  qdrant_tool.py  strava_service.py  token_service.py
strideMCP/server/tools/: strava_tools.py
strideMCP/server/utils/: stravaUtility.py
